--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {%block body %}
 <div class='content'>
-    <h1>Task Master </h1>
+    <h1 style="text-align: center">Task Master </h1>
 
     <table border="1" frame="void" rules="all">
         <tr>
@@ -12,15 +12,17 @@
             <th>Added</th>
             <th>Actions</th>
         </tr>
+        {% for task in tasks %}
         <tr>
-            <td></td>
-            <td></td>
+            <td>{{task.content}}</td>
+            <td>{{task.date_created.date()}} </td>
             <td>
-                <a href="">Delete</a>
+                <a href="/delete/{{task.id}}">Delete</a>
                 <br>
                 <a href="">Update</a>
             </td>
         </tr>
+        {% endfor %}
     </table>
     <form action='/' method="POST">
         <input type='text' name="content" id="content">
