--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
 <div class='content'>
     <h1 style="text-align: center">Task Master </h1>
 
+    {% if tasks|length<1 %}
+    <h4 style="text-align: center">There are no tasks, create one!</h4>
+    {% else %}
+
     <table border="1" frame="void" rules="all">
         <tr>
             <th>Task</th>
@@ -19,11 +23,12 @@
             <td>
                 <a href="/delete/{{task.id}}">Delete</a>
                 <br>
-                <a href="">Update</a>
+                <a href="/update/{{task.id}}">Update</a>
             </td>
         </tr>
         {% endfor %}
     </table>
+            {% endif %}
     <form action='/' method="POST">
         <input type='text' name="content" id="content">
         <input type='submit' value="Add Task">
